# openGL_curves

./: .gitignore  CMakeLists.txt  README.md
src/: .main.cpp.swp  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  camera.h  main.cpp  Новый текстовый документ.txt
src/Renderer/: Renderer.h  ShaderProgram.cpp  ShaderProgram.h  shader.frag  shader.vs
src/Renderer/Shader/: shader.frag  shader.vs  shader1.frag  shader1.vs  shader_texture.frag
src/Renderer/Shader/ibm/: ibm_1401.mtl
src/Renderer/Shader/ibm-1401-central-processing-unit/source/: ibm_1401.blend
src/Scene/: Scene.cpp  Scene.h  SceneTest.cpp  SceneTest.h  SceneTexture.cpp  SceneTexture.h
